GSSO-191 Add proper values to consent accept